GtkScale: Fix: highlight can overflow trough

For visual explanation, visit https://gitlab.gnome.org/GNOME/gtk/-/issues/5751